--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
     "prod": "ng serve --host 0.0.0.0 --configuration=production --live-reload false",
     "dev": "ng serve --host 0.0.0.0",
