--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -86,7 +86,11 @@
             <artifactId>junit</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>8.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
